# ferrite-nn

./: Cargo.toml  README.md
.claude/agent-memory/ferrite-nn-maintainer/: MEMORY.md
.claude/agent-memory/ferrite-nn-trainer/: MEMORY.md  architecture-analysis.md
.claude/agent-memory/repo-curator/: MEMORY.md
.claude/agents/: ferrite-nn-gui.md  ferrite-nn-maintainer.md  ferrite-nn-trainer.md  repo-curator.md
examples/: gui.rs  mnist.rs  xor.rs
examples/gui/: index.html
src/: lib.rs  main.rs
src/activation/: activation.rs  mod.rs
src/layers/: dense.rs  mod.rs
src/loss/: bce.rs  cross_entropy.rs  huber.rs  loss_type.rs  mae.rs  mod.rs  mse.rs
src/math/: matrix.rs
src/network/: metadata.rs  mod.rs  network.rs  spec.rs
src/optim/: mod.rs  sgd.rs
src/train/: epoch_stats.rs  loop_fn.rs  mod.rs  train_config.rs  trainer.rs
studio/: main.rs  render.rs  routes.rs  state.rs
studio/assets/: studio.html
studio/handlers/: architect.rs  dataset.rs  evaluate.rs  mod.rs  models.rs  test.rs  train.rs  train_sse.rs
studio/util/: csv.rs  form.rs  idx.rs  image.rs  mod.rs  multipart.rs  sse.rs
trained_models/: first_network.json
