[package]
name = "ferrite-nn"
version = "0.1.0"
edition = "2021"
description = "A from-scratch neural network library in Rust — no external ML dependencies."
license = "MIT"

[lib]
name = "ferrite_nn"
path = "src/lib.rs"

[[bin]]
name = "ferrite-nn"
path = "src/main.rs"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "gui"
path = "examples/gui.rs"

[dependencies]
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tiny_http = "0.12"
