[package]
name = "ferrite-nn"
version = "0.1.0"
edition = "2021"
description = "A from-scratch neural network library in Rust — no external ML dependencies."
license = "MIT"

[lib]
name = "ferrite_nn"
path = "src/lib.rs"

[[bin]]
name = "ferrite-nn"
path = "src/main.rs"

[[bin]]
name = "studio"
path = "studio/main.rs"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[dependencies]
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
